// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`applyTheme > with baseThemeId > attaches one style node containing overrides with the correct theme selector 1`] = `
".secondary-theme.secondary-theme:not(#\\9){
	--black-css:purple;
	--grey-css:grey;
	--brown-css:black;
	--shadow-css:yellow;
	--buttonShadow-css:red;
	--boxShadow-css:green;
	--lineShadow-css:pink;
}
@media not print {.dark.dark.secondary-theme:not(#\\9){
	--shadow-css:orange;
	--boxShadow-css:var(--brown-css);
}}
.secondary-theme.secondary-theme .navigation:not(#\\9){
	--shadow-css:pink;
}
.navigation.navigation.secondary-theme:not(#\\9){
	--shadow-css:pink;
}
@media not print {.dark.dark.secondary-theme .navigation:not(#\\9){
	--shadow-css:var(--grey-css);
	--buttonShadow-css:green;
}}
@media not print {.dark.dark.navigation.secondary-theme:not(#\\9){
	--shadow-css:var(--grey-css);
	--buttonShadow-css:green;
}}"
`;

exports[`applyTheme > with secondary theme > attaches one style node containing override 1`] = `
":root:root{
	--black-css:black;
	--grey-css:grey;
	--brown-css:brown;
	--shadow-css:yellow;
	--buttonShadow-css:red;
	--boxShadow-css:green;
	--lineShadow-css:pink;
}
@media not print {.dark.dark:not(#\\9){
	--shadow-css:orange;
	--boxShadow-css:var(--brown-css);
}}
.navigation.navigation:not(#\\9){
	--shadow-css:pink;
	--boxShadow-css:purple;
}
@media not print {.dark.dark .navigation:not(#\\9){
	--shadow-css:var(--brown-css);
	--buttonShadow-css:green;
}}
@media not print {.dark.dark.navigation:not(#\\9){
	--shadow-css:var(--brown-css);
	--buttonShadow-css:green;
}}"
`;

exports[`applyTheme > with targetDocument > attaches one style node containing override on the target document 1`] = `
":root:root{
	--black-css:black;
	--grey-css:grey;
	--brown-css:brown;
	--shadow-css:yellow;
	--buttonShadow-css:red;
	--boxShadow-css:green;
	--lineShadow-css:pink;
}
@media not print {.dark.dark:not(#\\9){
	--shadow-css:orange;
	--boxShadow-css:var(--brown-css);
}}
.navigation.navigation:not(#\\9){
	--shadow-css:pink;
	--boxShadow-css:purple;
}
@media not print {.dark.dark .navigation:not(#\\9){
	--shadow-css:var(--brown-css);
	--buttonShadow-css:green;
}}
@media not print {.dark.dark.navigation:not(#\\9){
	--shadow-css:var(--brown-css);
	--buttonShadow-css:green;
}}"
`;

exports[`applyTheme > without secondary theme > attaches one style node containing override 1`] = `
":root:root{
	--black-css:black;
	--grey-css:grey;
	--brown-css:brown;
	--shadow-css:yellow;
	--buttonShadow-css:red;
	--boxShadow-css:green;
	--lineShadow-css:pink;
}
@media not print {.dark.dark:not(#\\9){
	--shadow-css:orange;
	--boxShadow-css:var(--brown-css);
}}
.navigation.navigation:not(#\\9){
	--shadow-css:pink;
	--boxShadow-css:purple;
}
@media not print {.dark.dark .navigation:not(#\\9){
	--shadow-css:var(--brown-css);
	--buttonShadow-css:green;
}}
@media not print {.dark.dark.navigation:not(#\\9){
	--shadow-css:var(--brown-css);
	--buttonShadow-css:green;
}}"
`;

exports[`generateThemeStylesheet > with baseThemeId > creates override styles 1`] = `
".secondary-theme.secondary-theme:not(#\\9){
	--shadow-css:yellow;
	--buttonShadow-css:red;
	--boxShadow-css:green;
	--lineShadow-css:pink;
}
@media not print {.dark.dark.secondary-theme:not(#\\9){
	--shadow-css:orange;
	--boxShadow-css:black;
}}
.secondary-theme.secondary-theme .navigation:not(#\\9){
	--shadow-css:pink;
}
.navigation.navigation.secondary-theme:not(#\\9){
	--shadow-css:pink;
}
@media not print {.dark.dark.secondary-theme .navigation:not(#\\9){
	--shadow-css:grey;
	--buttonShadow-css:green;
}}
@media not print {.dark.dark.navigation.secondary-theme:not(#\\9){
	--shadow-css:grey;
	--buttonShadow-css:green;
}}"
`;

exports[`generateThemeStylesheet > with reference tokens and useCssVars > creates override styles with CSS variables when useCssVars is enabled 1`] = `
":root:root{
	--colorPrimary600-css:#ff6600;
	--colorPrimary700-css:#692dc9;
}"
`;

exports[`generateThemeStylesheet > with reference tokens and useCssVars > creates override styles without CSS variables by default 1`] = `
":root:root{
	--colorPrimary600-css:#ff6600;
	--colorPrimary700-css:#692dc9;
	--colorButtonPrimary-css:#ff6600;
	--colorButtonSecondary-css:#692dc9;
	--colorTextPrimary-css:#ff6600;
	--colorBackgroundPrimary-css:#692dc9;
}"
`;

exports[`generateThemeStylesheet > with secondary theme > creates override styles 1`] = `
":root:root{
	--shadow-css:yellow;
	--buttonShadow-css:red;
	--boxShadow-css:green;
	--lineShadow-css:pink;
}
@media not print {.dark.dark:not(#\\9){
	--shadow-css:orange;
	--boxShadow-css:brown;
}}
.navigation.navigation:not(#\\9){
	--shadow-css:pink;
	--boxShadow-css:purple;
}
@media not print {.dark.dark .navigation:not(#\\9){
	--shadow-css:brown;
	--buttonShadow-css:green;
}}
@media not print {.dark.dark.navigation:not(#\\9){
	--shadow-css:brown;
	--buttonShadow-css:green;
}}"
`;

exports[`generateThemeStylesheet > without secondary theme > creates override styles 1`] = `
":root:root{
	--shadow-css:yellow;
	--buttonShadow-css:red;
	--boxShadow-css:green;
	--lineShadow-css:pink;
}
@media not print {.dark.dark:not(#\\9){
	--shadow-css:orange;
	--boxShadow-css:brown;
}}
.navigation.navigation:not(#\\9){
	--shadow-css:pink;
	--boxShadow-css:purple;
}
@media not print {.dark.dark .navigation:not(#\\9){
	--shadow-css:brown;
	--buttonShadow-css:green;
}}
@media not print {.dark.dark.navigation:not(#\\9){
	--shadow-css:brown;
	--buttonShadow-css:green;
}}"
`;
